--- a/task-books/src/App.css
+++ b/task-books/src/App.css
@@ -57,3 +57,42 @@ nav a:last-child{
   height:35px;
 }
 
+@media only screen and (min-width: 0px) and (max-width: 768px){
+  .titlebar{
+    display:flex;
+    gap:10px;
+  }
+  
+  .titlebar img{
+    width:50px;
+    height:25px;
+  }
+  .App-header{
+    background-color: white;
+    padding: 20px 0px;
+    margin:0px 0px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid black;
+    justify-content: space-between;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
+  .primary-nav{
+    margin-top:10px;
+    text-align: center;
+  }
+  nav a:not(:last-child){
+    padding:0px 10px;
+    border-right: 2px solid black;
+  }
+  nav a:last-child{
+    padding:0px 20px
+  }
+  .app-title{
+    font-size: medium;
+  }
+}
+
