--- a/task-books/src/features/BookDetails/BookDetails.css
+++ b/task-books/src/features/BookDetails/BookDetails.css
@@ -2,15 +2,17 @@
     display:flex;
     flex-direction: row;
     padding:20px;
-    gap: 50px;
+    gap: 50px; 
     margin-top:90px;
 }
 .book-detail-img-container{
     width: 20%;
+    
 }
 .book-detail-img-container img{
     margin-top:10px;
     width:100%;
+    border:1px solid black;
 }
 .book-detail-prop-container{
     
@@ -40,4 +42,28 @@
     background-color: rosybrown;
     color: white;
     border:none;
+}
+.book-title-min{
+    display: none;
+}
+
+@media only screen and (min-width: 0px) and (max-width: 768px){
+    .book-title{
+        display:none;
+    }
+    .book-title-min{
+        display:block;
+    }
+    .book-button{
+        width: 100%;
+    }
+    .book-detail-img-container{
+        width:25%;
+    }
+    .book-detail-prop-container{
+        width: 100%;
+    }
+    .book-detail-container{
+        flex-direction: column;
+    }
 }
